--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(rs_addons)
+#cmake_policy(NEW)
+project(rs_classifiers)
 
 
 find_package(simtrack_nodes QUIET)
@@ -17,7 +18,10 @@ endif(json_prolog_FOUND)
 find_package(Caffe QUIET)
 find_package(aruco QUIET)
 find_package(MPI QUIET)
-find_package(RapidJSON REQUIRED) 
+
+find_package(Boost REQUIRED COMPONENTS system thread date_time python numpy filesystem regex)
+find_package(PythonLibs REQUIRED)
+include_directories(${PYTHON_INCLUDE_DIRS})
 
 
 if(Caffe_FOUND)
@@ -31,56 +35,61 @@ endif(Caffe_FOUND)
 find_package(catkin REQUIRED robosherlock
     message_generation
     message_runtime
+	rapidjson_ros
     ${OPTIONAL_simtrack}
     ${OPTIONAL_json_prolog}
     )
 
-################################################################################
-## Constants for project                                                      ##
-################################################################################
+message(STATUS " RS built with google googgles: " ${RS_WITH_GG})
+message(STATUS " RS built with Caffe: " ${RS_WITH_CAFFE})
+
+#################################################################################
+### Constants for project                                                      ##
+#################################################################################
 set(NAMESPACE rs_addons)
-set(TYPESYSTEM_CPP_PATH ${PROJECT_SOURCE_DIR}/include/rs_addons/types)
+set(TYPESYSTEM_CPP_PATH ${PROJECT_SOURCE_DIR}/include/rs_classifiers/types)
 set(TYPESYSTEM_XML_PATH ${PROJECT_SOURCE_DIR}/descriptors/typesystem)
 set(ANNOTATOR_PATH      ${PROJECT_SOURCE_DIR}/descriptors/annotators)
 set(ENGINE_PATH         ${PROJECT_SOURCE_DIR}/descriptors/analysis_engines)
-set(CMAKE_MODULE_PATH   ${PROJECT_SOURCE_DIR}/cmake)
-################################################################################
-## Configure project configuration files                                      ##
-################################################################################
-configure_file(${RS_PROJECT_CONFIG} ${PROJECT_SOURCE_DIR}/cmake/${PROJECT_NAME}_config.cmake @ONLY)
+
+configure_file(${RS_PROJECT_CONFIG} ${PROJECT_SOURCE_DIR}/cmake/${PROJECT_NAME}_config.cmake)
+#include(cmake/rs_addons_config.cmake)
+
 ################################################################################
 ## Find all include directories                                               ##
 ################################################################################
-find_include_dirs(RS_INCLUDE_DIRS_LIST)
+find_include_dirs(RS_ADDONS_INCLUDE_DIRS_LIST)
 
 catkin_package(
-    INCLUDE_DIRS ${RS_INCLUDE_DIRS_LIST}
-    LIBRARIES ${RS_LIBS}
+    #INCLUDE_DIRS ${RS_ADDONS_INCLUDE_DIRS_LIST}
+    #LIBRARIES ${RS_LIBS}
     CATKIN_DEPENDS robosherlock
-    CFG_EXTRAS ${PROJECT_NAME}_config.cmake
+    #CFG_EXTRAS ${PROJECT_NAME}_config.cmake
     )
 
 include_directories(
     ${RapidJSON_INCLUDE_DIRS}
-    ${RS_INCLUDE_DIRS_LIST}
+    ${RS_ADDONS_INCLUDE_DIRS_LIST}
+    ${Boost_INCLUDE_DIRS}
     ${catkin_INCLUDE_DIRS}
     )
 
 ################################################################################
 ## Update analysis engines, typesystem and include all relevant files         ##
 ################################################################################
-##Update xml list of annotators inside analysis engines
-#update_analysis_engines(robosherlock)
 ## generate classes from the typesystem xml files
 generate_type_system(robosherlock)
+
 #find all relevant files
 find_additional_files()
-################################################################################
-## Sub Projects                                                               ##
-################################################################################
+###############################################################################
+# Sub Projects                                                               ##
+###############################################################################
 #If you want to divide your projects into subprojects include the subdirectories
 #each containing a CMakeLists.txt here
 #add_subdirectory(src/xxx)
+
+catkin_python_setup()
 
 if(simtrack_nodes_FOUND)
     rs_add_library(rs_simtrack src/SimtrackDetection.cpp)
@@ -98,7 +107,7 @@ else(aruco_FOUND)
     message(WARNING "Aruco not found. AR Markers Detector will NOT be built")
 endif(aruco_FOUND)
 
-if(Caffe_FOUND)
+if(Caffe_FOUND AND RS_WITH_CAFFE)
   rs_add_library(rs_caffeClassification src/CaffeClassificationAnnotator.cpp)
   target_link_libraries(rs_caffeClassification
         ${catkin_LIBRARIES}
@@ -110,7 +119,7 @@ if(Caffe_FOUND)
         ${PCL_LIBRARIES}
         ${Caffe_LIBRARIES}
         )
-endif(Caffe_FOUND)
+endif()
 
 add_executable(featureExtractor src/tools/feature_extractor.cpp)
 target_link_libraries(featureExtractor
@@ -152,19 +161,7 @@ target_link_libraries(rs_knnAnnotator rs_classifiers
     ${CATKIN_LIBRARIES}
     ${OpenCV_LIBRARIES})
 
-rs_add_library(rs_unrealGTAnnotator src/UnrealGTAnnotator.cpp)
-target_link_libraries(rs_unrealGTAnnotator
-    ${catkin_LIBRARIES}
-    ${OpenCV_LIBRARIES}
-    )
+# download and install trained data
+#add_custom_target(install_trained_data ALL COMMAND ${PROJECT_SOURCE_DIR}/scripts/install_trained_data.py)
 
-
-# this needs to be renamed...if this is just for running test
-# data trhough the system it can an executable
-rs_add_library(rs_classifyOfflineAnnotator src/ClassifyOfflineAnnotator.cpp)
-target_link_libraries(rs_classifyOfflineAnnotator rs_classifiers
-    ${CATKIN_LIBRARIES}
-    ${OpenCV_LIBRARIES}
-    ${Boost_LIBRARIES})
-
-add_subdirectory(src/annotators)
+#add_subdirectory(src/annotators)
